syntax = "proto3";

package feed;

option go_package = "/favorite";

import "idl/douyin/common.proto";
import "idl/google/api/annotations.proto";

message FavoriteCountRequest {
  int64 user_id = 1;
}

message FavoriteCountResponse {
  int64 count = 1;
}

message FavoriteActionRequest {
  int64 video_id = 1;
  int32 action_type = 2;
}

message FavoriteActionResponse{}

message FavoriteListRequest{
}

message FavoriteListResponse {
  repeated common.Video videos = 1;
}

message UserFavoritedRequest {
  repeated int64 video_id = 1;
}

message UserFavoritedResponse {
  int64 count = 1;
}

message VideoFavoriteCountRequest {
  int64 video_id = 1;
}

message VideoFavoriteCountResponse {
  int64 count = 1;
}

message IsFavoriteRequest {
  int64 user_id = 1;
  int64 video_id = 2;
}

message IsFavoriteResponse {
  bool is_favorite = 1;
}

service FavoriteService {
  rpc FavoriteCount(FavoriteCountRequest) returns (FavoriteCountResponse);
  rpc UserFavorited(UserFavoritedRequest) returns (UserFavoritedResponse);
  rpc VideoFavoriteCount(VideoFavoriteCountRequest) returns (VideoFavoriteCountResponse);
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse) {
    option (google.api.http) = {
      post: "/api/favorite/action"
      body: "*"
    };
  }
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse) {
    option (google.api.http) = {
      get: "/api/favorite/list"
    };
  }
  rpc IsFavorite(IsFavoriteRequest) returns (IsFavoriteResponse);
}
